--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -106,7 +106,7 @@
         </div>
         <div class="no-break">
           <h4>Grading</h4>
-          <p>Your grade will depend on your participation (35%), your craft (15%), your process (25%), and the completion of all the projects by the end of the class (25%).</p>
+          <p>Your grade will depend on your participation and attendance (35%), exercises (25%), and projects (40%). The projects and exercises will be graded based on the goals of the assignment.</p>
         </div>
         <div class="no-break">
           <h4>University and School of Art Policies</h4>
