--- a/projects/index.html
+++ b/projects/index.html
@@ -43,7 +43,8 @@
           <li><strong>January 29</strong> Due</li>
         </ul>
         <h4>E1. Find the Grid</h4>
-        <p>Show the grid of 5 different website's home pages.</p>
+        <p>Show the columns of 3 different website's home pages. Use a well designed website, a website you visit frequently, and a &ldquo;poorly&rdquo; designed website.</p>
+        <p>Make a document that has 3 landscape letter pages. One site will be on each page. For each page show the site on its own, the site with the column overlay, and then just the column layout. There is a link to the example file from class on Blackboard.</p>
         <ul>
           <li><strong>January 24</strong> Start</li>
           <li><strong>January 31</strong> Due</li>
