--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <h2><a href="#">cameron</a></h2>
       </div>
       <div class="student">
+        <h2><a href="#">casey</a></h2>
+      </div>
+      <div class="student">
         <h2><a href="#">christina</a></h2>
       </div>
       <div class="student">
@@ -53,10 +56,10 @@
         <h2><a href="#">danielle</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">gabriel</a></h2>
+        <h2><a href="#">frank</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">henry</a></h2>
+        <h2><a href="#">gabe</a></h2>
       </div>
       <div class="student">
         <h2><a href="#">indira</a></h2>
@@ -65,25 +68,25 @@
         <h2><a href="#">jonathan</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">julia</a></h2>
+        <h2><a href="#">kevin</a></h2>
       </div>
-      <div class="student">  
+      <div class="student">
+        <h2><a href="#">lauren</a></h2>
+      </div>
+      <div class="student">
         <h2><a href="#">louisa</a></h2>
       </div>
       <div class="student">
         <h2><a href="#">rachel</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">samuel</a></h2>
-      </div>
-      <div class="student">
-        <h2><a href="#">seth</a></h2>
+        <h2><a href="#">sam</a></h2>
       </div>
       <div class="student">
         <h2><a href="#">taylor</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">thuy</a></h2>
+        <h2><a href="#">phuong</a></h2>
       </div>
       <div class="student">
         <h2><a href="#">virginia</a></h2>
@@ -93,9 +96,6 @@
       </div>
       <div class="student">
         <h2><a href="#">zayd</a></h2>
-      </div>    
-      <div class="student">
-        <h2><a href="#">extra</a></h2>
       </div>
       <div class="student">
         <h2></h2>
