--- a/schedule/index.html
+++ b/schedule/index.html
@@ -41,7 +41,7 @@
           <ul>
             <li><strong>January 22</strong> - Github, Text editors, Basic HTML Set Up, Clean Coding, E0, R1</li>
             <li><strong>January 24</strong> - Software, Layout, Grid &amp; Space, E1</li>
-            <li><strong>January 29</strong> - Folder & File Organization, Links & Images, E2, R2</li>
+            <li><strong>January 29</strong> - Github Setup, Folder & File Organization, Links & Images, E2, R2</li>
             <li><strong>January 31</strong> - Heirarchy, E3</li>
             <li><strong>February 5</strong> - CSS Basics, External Stylesheets, E4, P1 Start, R3</li>
             <li><strong>February 7</strong> - Web Type, E5</li>
