gitignore and project updates

--- a/projects/index.html
+++ b/projects/index.html
@@ -57,7 +57,8 @@
           <li><strong>February 5</strong> Due</li>
         </ul>
         <h4>E3. Heirarchy</h4>
-        <p>Show the heirarchy of 5 different website's home pages.</p>
+        <p>Show the heirarchy of 3 different website's home pages. Use a well designed website, a website you visit frequently, and a &ldquo;poorly&rdquo; designed website.</p>
+        <p>Make a document that has 3 landscape letter pages. One site will be on each page. For each page show the site on its own, the site with the heirarchy overlay, and then just the heirarchy on its own.</p>
         <ul>
           <li><strong>January 31</strong> Start</li>
           <li><strong>February 7</strong> Due</li>
