Adding Github Links

--- a/index.html
+++ b/index.html
@@ -35,67 +35,67 @@
     </header>
     <div id="container" class="clearfix bg-db">
       <div class="student">
-        <h2><a href="#">ashley</a></h2>
+        <h2><a href="https://ohashlilies.github.io/introtowebdesign/">ashley</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">ben</a></h2>
+        <h2><a href="https://kazuhira893.github.io/intro_to_web_design/">ben</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">cameron</a></h2>
+        <h2><a href="https://chiumentocam.github.io/webdesign/">cameron</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">casey</a></h2>
+        <h2><a href="https://CDavis0202.github.io/Spring2019/">casey</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">christina</a></h2>
+        <h2><a href="https://cmatty612.github.io/avt217/">christina</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">connor</a></h2>
+        <h2><a href="https://thegameguy415.github.io/AVT_217/">connor</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">danielle</a></h2>
+        <h2><a href="https://DPandaHeart.github.io/Spring2019_WebDesign/">danielle</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">frank</a></h2>
+        <h2><a href="https://henryflippen.github.io/avt217/">frank</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">gabe</a></h2>
+        <h2><a href="https://okamihellion.github.io/avt217/">gabe</a></h2>
       </div>
       <div class="student">
         <h2><a href="#">indira</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">jonathan</a></h2>
+        <h2><a href="https://jleung1283.github.io/webdesign/">jonathan</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">kevin</a></h2>
+        <h2><a href="https://ktruong9.github.io/AVT-217-001-Kevin-Truong/">kevin</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">lauren</a></h2>
+        <h2><a href="https://lhohe.github.io/github1/">lauren</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">louisa</a></h2>
+        <h2><a href="https://ramirezlm12.github.io/AVT217/">louisa</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">rachel</a></h2>
+        <h2><a href="https://rwhite776.github.io/avt217webDesign/">rachel</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">sam</a></h2>
+        <h2><a href="https://shock019.github.io/webdesign/">sam</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">taylor</a></h2>
+        <h2><a href="https://tquette.github.io/introtowebdesign/">taylor</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">phuong</a></h2>
+        <h2><a href="https://scarletheartz.github.io/Scarlet_Heartz/">phuong</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">virginia</a></h2>
+        <h2><a href="https://vcline1.github.io/webdesign/">virginia</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">xavier</a></h2>
+        <h2><a href="https://zavey.github.io/introwebdesign/">xavier</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">zayd</a></h2>
+        <h2><a href="https://zkochaji.github.io/webdesign/">zayd</a></h2>
       </div>
       <div class="student">
         <h2></h2>
