update kevin's URL

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h2><a href="https://jleung1283.github.io/webdesign/">jonathan</a></h2>
       </div>
       <div class="student">
-        <h2><a href="https://ktruong9.github.io/AVT-217-001-Kevin-Truong/">kevin</a></h2>
+        <h2><a href="https://ktruong9.github.io/test/">kevin</a></h2>
       </div>
       <div class="student">
         <h2><a href="https://lhohe.github.io/github1/">lauren</a></h2>
