--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h2><a href="https://okamihellion.github.io/avt217/">gabe</a></h2>
       </div>
       <div class="student">
-        <h2><a href="#">indira</a></h2>
+        <h2><a href="https://indimoen.github.io/introtowebdesign/">indira</a></h2>
       </div>
       <div class="student">
         <h2><a href="https://jleung1283.github.io/webdesign/">jonathan</a></h2>
