--- a/schedule/index.html
+++ b/schedule/index.html
@@ -45,11 +45,11 @@
             <li><strong>January 31</strong> - Heirarchy, E3</li>
             <li><strong>February 5</strong> - CSS Basics, External Stylesheets, E4, P1 Start, R3</li>
             <li><strong>February 7</strong> - Web Type, E5</li>
-            <li><strong>February 12</strong> - Box model, General Setup, Padding &amp; Margins, E6, R4</li>
-            <li><strong>February 14</strong> - Color & Images, E7</li>
-            <li><strong>February 19</strong> - CSS Selectors (Classes &amp; IDs), Floats, E8</li>
+            <li><strong>February 12</strong> - CSS Selectors (Classes &amp; IDs), Floats, E6, R4</li>
+            <li><strong>February 14</strong> - Color & Images, Positioning, E7</li>
+            <li><strong>February 19</strong> - Box model, General Setup, Padding &amp; Margins, E8</li>
             <li><strong>February 21</strong> - Site Maps, Wireframes, E9, E10, P2 Start</li>
-            <li><strong>February 26</strong> - Positioning, E11</li>
+            <li><strong>February 26</strong> - E11</li>
             <li><strong>February 28</strong> - Responsive Design</li>
             <li><strong>March 5</strong> - Web Typography, E12, P1 Final</li>
             <li><strong>March 7</strong> - Navigation, E13</li>
