--- a/projects/index.html
+++ b/projects/index.html
@@ -83,7 +83,7 @@
           <li><strong>February 19</strong> Due</li>
         </ul>
         <h4>E7. Type on Screen, Part 2</h4>
-        <p>Make five more layours using the same book you used in Exercise 5. This time you can use color and images.</p>
+        <p>Make five more layouts using the same book you used in Exercise 5. This time add color and images. Each version does not have to have both color and images but should have at least color or image(s).</p>
         <ul>
           <li><strong>February 14</strong> Start</li>
           <li><strong>February 21</strong> Due</li>
