--- a/schedule/index.html
+++ b/schedule/index.html
@@ -46,8 +46,8 @@
             <li><strong>February 5</strong> - CSS Basics, External Stylesheets, E4, P1 Start, R3</li>
             <li><strong>February 7</strong> - Web Type, E5</li>
             <li><strong>February 12</strong> - CSS Selectors (Classes &amp; IDs), Floats, E6, R4</li>
-            <li><strong>February 14</strong> - Color & Images, Positioning, E7, E8</li>
-            <li><strong>February 19</strong> - Box model, General Setup, Padding &amp; Margins, E9</li>
+            <li><strong>February 14</strong> - Color & Images, Positioning, E7, E8, R5</li>
+            <li><strong>February 19</strong> - Box model, General Setup, Padding &amp; Margins, E9, R6</li>
             <li><strong>February 21</strong> - Site Maps, Wireframes, E10, E11, P2 Start</li>
             <li><strong>February 26</strong> - E12</li>
             <li><strong>February 28</strong> - Responsive Design</li>
@@ -74,8 +74,10 @@
           <ul>
             <li><strong>R1</strong> - Codecademy (Introduction to HTML - Learn HTML: Elements and Structure)</li>
             <li><strong>R2</strong> - <a href="https://internetingishard.com/html-and-css/links-and-images/">Interneting is Hard: Links &amp; Images</a>
-            <li><strong>R2</strong> - Codecademy (Learn CSS - Learn CSS: Selectors and Visual Rules)</li>
-            <li><strong>R3</strong> - <a href="https://internetingishard.com/html-and-css/css-box-model/">Interneting is Hard: CSS Box Model</a></li>
+            <li><strong>R3</strong> - Codecademy (Learn CSS - Learn CSS: Selectors and Visual Rules)</li>
+            <li><strong>R4</strong> - <a href="https://internetingishard.com/html-and-css/floats/">Interneting is Hard: Floats</a> &amp; <a href="https://internetingishard.com/html-and-css/css-selectors/">Interneting is Hard: CSS Selectors</a> </li>
+            <li><strong>R5</strong> - <a href="https://internetingishard.com/html-and-css/advanced-positioning/"></a>Interneting is Hard: Positioning</li>
+            <li><strong>R6</strong> - <a href="https://internetingishard.com/html-and-css/css-box-model/">Interneting is Hard: CSS Box Model</a></li>
           </ul>
         </div>
       </div>
