--- a/schedule/index.html
+++ b/schedule/index.html
@@ -76,7 +76,7 @@
             <li><strong>R2</strong> - <a href="https://internetingishard.com/html-and-css/links-and-images/">Interneting is Hard: Links &amp; Images</a>
             <li><strong>R3</strong> - Codecademy (Learn CSS - Learn CSS: Selectors and Visual Rules)</li>
             <li><strong>R4</strong> - <a href="https://internetingishard.com/html-and-css/floats/">Interneting is Hard: Floats</a> &amp; <a href="https://internetingishard.com/html-and-css/css-selectors/">Interneting is Hard: CSS Selectors</a> </li>
-            <li><strong>R5</strong> - <a href="https://internetingishard.com/html-and-css/advanced-positioning/"></a>Interneting is Hard: Positioning</li>
+            <li><strong>R5</strong> - <a href="https://internetingishard.com/html-and-css/advanced-positioning/">Interneting is Hard: Positioning</a></li>
             <li><strong>R6</strong> - <a href="https://internetingishard.com/html-and-css/css-box-model/">Interneting is Hard: CSS Box Model</a></li>
           </ul>
         </div>
