--- a/projects/index.html
+++ b/projects/index.html
@@ -109,7 +109,7 @@
           <li><strong>February 28</strong> Due</li>
         </ul>
         <h4>E11. Wireframes</h4>
-        <p>Create two wireframes for the home page of the site you used for your site map. The first wireframe should be done on Sketch, Illustrator, or XD and use the widest version of the site you can see. The second wireframe should be done with pen/pencil and paper and use the mobile version of the site.</p>
+        <p>Create two wireframes for the home page of the site you used for your site map. The first wireframe should use the widest version of the site you can see. The second wireframe should use the mobile version of the site. You can create both of them sketched on paper, both digitally, or one of each.</p>
         <p>Upload your final site map to your site and include a link to the website you made the site map for.</p>
         <ul>
           <li><strong>February 21</strong> Start</li>
