--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -51,9 +51,8 @@
           <li><strong>AVT 217 - 001 //&nbsp;</strong></li>
           <li><strong>3 Credits //&nbsp;</strong></li>
           <li><strong>TR 10:30&ndash;1:10 //&nbsp;</strong></li>
-          <li><strong>ADB 1023</strong></li>
-          <li><strong>TA</strong> Molly Pronko</li>
-          <li><strong>Email</strong> mpronko@gmu.edu</li>
+          <li><strong>ADB 1023  //&nbsp;</strong></li>
+          <li><strong>mmcderm8@gmu.edu</strong></li>
         </ul>
         <div class="no-break">
           <h4>Prerequisites</h4>
