--- a/schedule/index.html
+++ b/schedule/index.html
@@ -49,23 +49,23 @@
             <li><strong>February 14</strong> - Color & Images, Positioning, E7, E8, R5</li>
             <li><strong>February 19</strong> - Box model, General Setup, Padding &amp; Margins, E9, R6</li>
             <li><strong>February 21</strong> - Site Maps, Wireframes, E10, E11, P2 Start</li>
-            <li><strong>February 26</strong> - E12</li>
+            <li><strong>February 26</strong> - Review Links, Review Basic Setup, Review E9</li>
             <li><strong>February 28</strong> - Responsive Design</li>
-            <li><strong>March 5</strong> - Web Typography, E13, P1 Final</li>
-            <li><strong>March 7</strong> - Navigation, E14</li>
+            <li><strong>March 5</strong> - Web Typography, E12, P1 Final</li>
+            <li><strong>March 7</strong> - Navigation, E13</li>
             <li><strong>March 12</strong> - Spring Break</li>
             <li><strong>March 14</strong> - Spring Break</li>
-            <li><strong>March 19</strong> - Media Queries, E15, P3 Start</li>
+            <li><strong>March 19</strong> - Media Queries, E14, P3 Start</li>
             <li><strong>March 21</strong> - Consistency</li>
-            <li><strong>March 26</strong> - Accessibility & Semantic HTML, E16</li>
+            <li><strong>March 26</strong> - Accessibility & Semantic HTML, E15</li>
             <li><strong>March 28</strong> - P2 Final, P4 Start</li>
-            <li><strong>April 2</strong> - jQuery 1, E17, P3 Final, P5 Start</li>
+            <li><strong>April 2</strong> - jQuery 1, E16, P3 Final, P5 Start</li>
             <li><strong>April 4</strong> - Web Evolution, References</li>
-            <li><strong>April 9</strong> - jQuery 2, E18</li>
+            <li><strong>April 9</strong> - jQuery 2, E17</li>
             <li><strong>April 11</strong> - Work Day</li>
             <li><strong>April 16</strong> - Work Day</li>
             <li><strong>April 18</strong> - Work Day</li>
-            <li><strong>April 23</strong> - Navigation, E19</li>
+            <li><strong>April 23</strong> - Navigation, E18</li>
             <li><strong>April 25</strong> - Work Day</li>
             <li><strong>April 30</strong> - P5 Final</li>
             <li><strong>May 2</strong> - P4 Final</li>
