--- a/projects/index.html
+++ b/projects/index.html
@@ -121,7 +121,7 @@
           <li><strong>March 5</strong> Start</li>
           <li><strong>March 19</strong> Due</li>
         </ul>
-        <h4>E13. Navigation Redesign</h4>
+        <h4 id="E13">E13. Navigation Redesign</h4>
         <p>Redesign the navigation of the same you made your site map and wireframes for from Exercise 9 and Exercise 10. This should be the desktop version of the site. Make sure you show hover states, dropdowns, and any other parts of the navigation that need to be interacted with to appear.</p>
         <ul>
           <li><strong>March 7</strong> Start</li>
